css/nim.css
ul #dropdown1 {
    width: unset !important;
}
#devToolsBadge {
    padding-right: 100px;
    float: right;
}
span .badgeLabel {
    background-color: #81c784;
    color: white;
}
#devtools-panel body #header {
    width: 100%;
    margin: auto;
    font-size: large;
}
#devtools-panel body #header #logo {
    width: 150px;
    margin: 20px auto;
}
#devtools-panel body #content {
    width: 100%;
    margin: auto;
}
body {
    font-family: 'Open Sans Condensed', sans-serif;
    font-size: 24px;
    padding: 0px 0px 0px 0px;
    height: 100%;
    width:700px;
    margin:0;
}
.toast {
    background: linear-gradient(135deg, #81c784, #ffffff69);
    color: black;
    font-size: large;
    word-break: break-word;
    border-radius: 10px;
    display: inherit;
}
.switch label input[type=checkbox]:checked+.lever {
    background-color:#e8f5e9;
}

.switch label input[type=checkbox]:checked+.lever:after {
    background-color:#4caf50;
}
[type="checkbox"]:checked+span:not(.lever):before {
    border-width: 1px;
    border-right-color:#4caf50;
    border-bottom-color:#4caf50;
}
[type="checkbox"]+span:not(.lever):before, [type="checkbox"]:not(.filled-in)+span:not(.lever):after {
    border-width: 1px;
}
#options-page div.row {
    margin-bottom: 15px;
}
#options-page body {
    width: 100%;
    min-width: 600px;
    min-height: 1024px !important;
    overflow: hidden;
}

#options-page #extension-options-overlay {
    max-height: 800px !important;
    min-height: 700px !important;
    height: 700px !important;
}
#options-page #extension-options-overlay-guest {
    max-height: 800px !important;
    min-height: 700px !important;
    height: 700px !important;
}

#options-page body li.collection-item {
    font-size: 16px;
    padding: 15px 17px 15px 17px;
    margin: 0px 0px 0px 0px;
}

#options-page body li.collection-item.subitem {
    padding-top: 5px;
    padding-bottom: 8px;
    padding-left: 50px;
    background-color: #fafafa;
}

#options-page body li.collection-item.bottom {
    padding-bottom: 20px;
}

#options-page #checkInterval {
    margin: 10px 0px 0px 0px;
}
#options-page .badge {
   background-color: #81c784;
   font-size: 16px; 
}
#options-page #checkInterval-value {
    background-color: #81c784;
    font-size: 16px;
}

#options-page #options-header {
    padding: 15px 0px 15px 0px;
    background-color: #4caf50;
}
#options-page #collections-header {
    font-size: 20px;
    font-weight: bold;
    background-color: #e0e0e0;
    padding: 20px 2f0px;
    overflow: none;
}
#options-page #collections-header-debugging {
    font-size: 20px;
    font-weight: bold;
    background-color: #e0e0e0;
    padding: 20px 20px;
    overflow: none;
}
#options-page #collections-header-rtc {
    font-size: 20px;
    font-weight: bold;
    background-color: #e0e0e0;
    padding: 20px 20px;
    overflow: none;
}
#options-page #collections-header-nims {
    font-size: 20px;
    font-weight: bold;
    background-color: #e0e0e0;
    padding: 20px 20px;
    overflow: none;
}
#options-page #collections-header-customDevToolsURL {
    font-size: 20px;
    font-weight: bold;
    background-color: #e0e0e0;
    padding: 20px 20px;
    overflow: none;
}
#options-page-ads-iframe {
    width: 100%;
    height: 97%;
}
#debugVerbosityBadge {
    background-color: #81c784;
}
label {
    font-size: 20px;
    font-weight: normal !important;
}
div > div > div.noUi-handle.noUi-handle-lower, div > div > div.noUi-handle.noUi-handle-lower:active {
    content: "";
    position: absolute;
    display: inline-block;
    width: 21px;
    height: 21px;
    background-color: #4caf50;
    border-radius: 21px;
    box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.4);
    left: -5px;
    top: -8.5px;
    transition: left 0.3s ease, background .3s ease, box-shadow 0.1s ease;
    border: none;
}
div > div > div.noUi-handle:after, .noUi-handle:before {
    display: none;
}
div.noUi-base {
    background-color: #818181;
    border-radius: 15px;
    border: none;
    height: 5px;
    margin-top: 15px;
}
.noUi-target {
    all: unset;
}
#options-page .noUi-target .range-label {
    background-color: #4caf50;
    position: absolute;
    height: 30px;
    width: 30px;
    top: -17px;
    left: -2px;
    border-radius: 50%;
    transition: border-radius 250ms cubic-bezier(0.215, 0.61, 0.355, 1) 0ms, transform cubic-bezier(0.215, 0.61, 0.355, 1);
    transform: scale(.5) rotate(-45deg);
    transform-origin: 50% 100%
}
#options-page #devtools_url {
    font-family: inherit;
}
.message {
    font-size: 14px;
}

.header {
    margin-left: 15px;
    margin-right: 15px;
    min-width: 350px;
}

.input-text {
    font-size: 20px !important;
    font-family: inherit;
}

.auto-switch {
    clear: both;
}

.footer-text {
    font-size: 18px;
    color: #33691e;
}

.container-page {
    padding: 0;
    margin: 0;
    width: 100%;
    height: 100%;
}
.row-footer {
    margin-bottom: 0px;
}
.row-footer div.col {
    padding-left: 0px;
    padding-right: 0px;
}

.animate-show.ng-hide-add,
.animate-show.ng-hide-remove {
    transition: all 0.2s cubic-bezier(.36, -0.64, .34, 1.76);
}

.animate-show {
    opacity: 1;
    background: white;
}

.animate-show.ng-hide {
    line-height: 0px;
    margin-top: 0px;
    margin-bottom: 0px;
    opacity: 0;
}

.animate-swing-show.ng-hide {
    line-height: 0px;
    padding-top: 0px !important;
    padding-bottom: 0px !important;
    opacity: 0;
    transform: rotateY(-90deg);
    transition: all 0.5s cubic-bezier(.36, -0.64, .34, 1.76);
}

.animate-swing-show {
    opacity: 1;
    transform: none;
    transition: all 0.5s cubic-bezier(.36, -0.64, .34, 1.76);
}

.swing {
    background-color: #f1f8e9;
    perspective: 400px;
}
body#nim {
    width: 100% !important;
}
.additional-options {
    text-decoration: none;
    color: black;
}
.material-icons#additionalOptions {
    line-height: inherit;
}
.alert {
    width: 70%;
    top: 1px !important;
    right: 5px !important;
    border-radius: 15px;
}
/* ... */

